--- a/src/index.css
+++ b/src/index.css
@@ -51,14 +51,14 @@ body {
   border-radius: 2rem;
   width: 500px;
   background-color: var(--White);
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 4px 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   display: flex;
 }
 
 .result {
   width: 50%;
   border-radius: 2rem;
-  padding: 1rem 2rem;
+  padding: 1.5rem 2rem;
   background: linear-gradient(var(--Light-slate-blue), var(--Light-royal-blue));
   display: flex;
   flex-direction: column;
@@ -82,8 +82,9 @@ body {
   height: 8.75rem;
   border-radius: 50%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-bottom: 1.0rem;
+  margin-bottom: 1.5rem;
 }
 
 
@@ -91,18 +92,20 @@ body {
   font-size: 0.7rem;
   margin-bottom: 1.5rem;
   display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
 }
 
 .title-result {
   color: var(--light-white);
   font-size: 0.9rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.75rem;
 }
 
 
 .numeric-score {
   color: var(--Light-lavender);
-  font-size: 1.5rem;
+  font-size: 2.5rem;
 }
 
 
@@ -120,31 +123,137 @@ body {
 
 
 .score-comment {
-  
+  color: var(--light-white);
+  font-size: 0.7rem;
+  padding: 0 0.5rem;
+  margin-bottom: 0.75rem;
 }
 
 
 .title-summary {
-  
+  font-size: 0.9rem;
+  font-weight: 800;
+  margin-bottom: 1.5rem;
 }
 
 
 .category {
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 0.75rem;
+}
 
 .btn-summary {
-  
+  background-color: var(--Dark-gray-blue);
+  color: var(--Light-lavender);
+  width: 100%;
+  border: none;
+  border-radius: 1rem;
+  padding: 0.6rem;
+  font-size: 0.6rem;
 }
 
 .btn-summary:hover {
-  }
+  background-color: var(--Light-royal-blue);
+  cursor: pointer;
+}
 
 .icon-text {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.icon-text img {
+  width: 0.75rem;
+}
+
+.category:nth-child(1) {
+  background-color: var(--light-light-red);
+  border-radius: 0.5rem;
+}
+
+.category:nth-child(2) {
+  background-color: var(--light-orangey-yellow);
+  border-radius: 0.5rem;
+}
+
+.category:nth-child(3) {
+  background-color: var(--light-green-teal);
+  border-radius: 0.5rem;
+}
+
+.category:nth-child(4) {
+  background-color: var(--light-cobalt-blue);
+  border-radius: 0.5rem;
+}
+
+.Reaction {
+  color: var(--Light-red);
+}
+
+.Memory {
+  color: var(--Orangey-yellow);
+}
+
+.Verbal {
+  color: var(--Green-teal);
+}
+
+.Visual {
+  color: var(--Cobalt-blue);
+}
+
+.bold {
+  font-weight: 800;
+}
+
+.normal {
+  color: var(--Dark-gray-blue);
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    align-items: flex-start;
+  }
+  .Screen {
+    box-shadow: none;
+    flex-direction: column;
+    align-items: center;
+    overflow: scroll;
+  }
+  .result {
+    width: 100vw;
+    border-radius: 0 0 2rem 2rem;
+    padding: 0.5rem 1rem;
+    gap: 0.5rem;
   }
 
+  .numeric-score {
+    margin-bottom: 0.1rem;
+  }
+
+  .summary {
+    width: 100vw;
+  }
+  
+  .score-comment {
+    width: 60vw;
+  }
+
+  .category {
+    padding: 1.25rem;
+    font-size: 0.75rem;
+  }
 
   .btn-summary {
+    padding: 0.75rem;
+    font-size: 0.75rem;
   }
+}
 
-
-
+@media screen and (max-width: 200px) {
+  .category {
+    flex-direction: column;
+  }
+}
